fix: details summary content alignment

--- a/components/01-atoms/details/details.pcss
+++ b/components/01-atoms/details/details.pcss
@@ -36,11 +36,14 @@
     color: var(--details-color-text);
     overflow: hidden;
     
-    span {
+    span,
+    > * {
+      display: inline-block;
       margin-inline-start: 0.25rem;
     }
     
     &::marker {
+      display: inline-block;
       color: var(--details-color-marker);
       margin-inline-end: 0.5rem;
     }
